# pingcrm_fastapi

./: .env  .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: ea16c9a10415_initial_migration.py
app/: main.py
app/api/: deps.py  middleware.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: accounts.py  organizations.py
app/api/v1/: api.py
app/api/v1/endpoints/: accounts.py  contacts.py  organizations.py  users.py
app/core/: config.py  exceptions.py
app/crud/: __init__.py  base.py  crud_account.py  crud_contact.py  crud_organization.py  crud_user.py
app/models/: __init__.py  account.py  base.py  contact.py  organization.py  user.py
app/schemas/: base.py  jsonapi.py  schemas.py
app/serializers/: account.py  base.py  contact.py  organization.py  serializers.py  user.py
