[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pingcrm"
version = "0.1.0"
authors = [
  { name="Umair Azam", email="omairr.azam@gmail.com" },
]
description = "PingCRM FastAPI Implementation"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = "."

[tool.hatch.build.targets.wheel]
packages = ["app"]
